[build-system]
# Minimum requirements for the build system to execute
# This file follows PEP 518 specification
requires = ["pip", "wheel", "setuptools", "jinja2", "Cython>=0.29.20", "numpy", "sphinx"]
# "numpy==1.16.5; python_version=='3.7'",
# "numpy==1.17.3; python_version=='3.8'",
# "numpy; python_version>='3.9'",
# do not pin numpy on future versions of python to avoid incompatible numpy and python versions
build-backend = "setuptools.build_meta"
